fixed a z-index issue

--- a/src/styles/section3.css
+++ b/src/styles/section3.css
@@ -33,7 +33,7 @@
     width: 45%;
     font-size: 25px;
 }
-.intersection{
+.fix-zindex{
     position: relative;
     z-index: 5;
 }
